--- a/static/index_style.css
+++ b/static/index_style.css
@@ -41,7 +41,14 @@ input[type=submit] {
     cursor: pointer;
     align: center;
     position: relative;
-    top: 200px;
+    top: 290px;
+    left: 10.5%;
+}
+
+input[name=mark_submit] {
+    width: 12%;
+    position: relative;
+    top: 400px;
     left: 10.5%;
 }
 
@@ -59,11 +66,30 @@ input[type=submit] {
     align: center;
 
     position: relative;
-    top: 100px;
+    top: 190px;
     left: 12%;
 }
 
 input[name=summary_type] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    background: white;
+
+    border: 2px solid #999;
+    transition: 0.2s all linear;
+    outline: none;
+    margin-right: 2%;
+
+    position: relative;
+    top: 4px;
+}
+
+input[name=summary_mark] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -99,4 +125,57 @@ input[type=file] {
     position: absolute;
     width: 20%;
     left: 70%;
+}
+
+.parameter-choose-name {
+    color: #333;
+    font: 20px monospace;
+
+    position: absolute;
+    width: 20%;
+    top: 260px;
+    left: 70%;
+}
+
+.parameter-choose {
+    color: #333;
+    font: 20px monospace;
+
+    position: absolute;
+    width: 20%;
+    top: 280px;
+    left: 70%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.8;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+label[class=mark] {
+  display: block;
+  color: #333;
+  font: 20px monospace;
+}
+
+ul {
+  list-style: none;
+  display: block;
+}
+
+ul li {
+  float: left;
+  display: block;
+  width: 35px;
+  text-align: center;
+  position: relative;
+  top: 400px;
+  left: 8%;
 }
