--- a/static/index_style.css
+++ b/static/index_style.css
@@ -133,7 +133,7 @@ input[type=file] {
 
     position: absolute;
     width: 20%;
-    top: 260px;
+    top: 35vh;
     left: 70%;
 }
 
@@ -143,7 +143,7 @@ input[type=file] {
 
     position: absolute;
     width: 20%;
-    top: 280px;
+    top: 38vh;
     left: 70%;
 }
 
@@ -157,6 +157,8 @@ input[type=file] {
   opacity: 0.8;
   -webkit-transition: .2s;
   transition: opacity .2s;
+  position: relative;
+  top: 0px;
 }
 
 label[class=mark] {
